--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -1,26 +1,28 @@
-name: Build and Publish Docker Image
+name: Docker Build and Publish
 
 on:
   push:
-    branches: [ main ]
-    tags: ['v*']
+    branches:
+      - main
+    # Also build on tags (release tags)
+    tags:
+      - 'v*'
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches:
+      - main
   workflow_dispatch:
     inputs:
-      override_tag:
-        description: 'Optional image tag to apply (e.g. rc-1)'
+      tag:
+        description: 'Optional image tag (overrides automatic tag)'
         required: false
-        type: string
-
-permissions:
-  contents: read
-  packages: write
-  id-token: write
+        default: ''
 
 jobs:
-  build-and-publish:
+  build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -31,42 +33,56 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Log in to GitHub Container Registry (GHCR)
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push image to GHCR
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/axanet:latest
-            ghcr.io/${{ github.repository_owner }}/axanet:${{ github.sha }}
-            ${{ inputs.override_tag && format('ghcr.io/{0}/axanet:{1}', github.repository_owner, inputs.override_tag) }}
-
-      - name: Login to Docker Hub (optional)
-        #if: ${{ secrets.DOCKERHUB_USERNAME && secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to Docker Hub
+        if: secrets.DOCKERHUB_USERNAME && secrets.DOCKERHUB_TOKEN
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push image to Docker Hub (optional)
-        #if: ${{ secrets.DOCKERHUB_USERNAME && secrets.DOCKERHUB_TOKEN }}
+      - name: Determine image name and tags
+        id: meta
+        run: |
+          IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/axanet"
+          # Prefer explicit tag from workflow_dispatch
+          TAG_INPUT="${{ github.event.inputs.tag }}"
+          if [ -n "$TAG_INPUT" ]; then
+            TAG="$TAG_INPUT"
+          else
+            # If this run is a tag push, use the tag name (strip refs/tags/)
+            if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+              TAG="${{ github.ref }}"
+              TAG=${TAG#refs/tags/}
+            else
+              # Use commit short sha and branch name
+              SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
+              BRANCH=${{ github.ref_name }}
+              TAG="${BRANCH}-${SHORT_SHA}"
+            fi
+          fi
+          echo "image=${IMAGE_NAME}" >> $GITHUB_OUTPUT
+          echo "tag=${TAG}" >> $GITHUB_OUTPUT
+
+      - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/axanet:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/axanet:${{ github.sha }}
+            ${{ steps.meta.outputs.image }}:${{ steps.meta.outputs.tag }}
+            ${{ steps.meta.outputs.image }}:latest
+          platforms: linux/amd64
 
-      - name: Report success
+      - name: Image info
         run: |
-          echo "Docker images built and published (where configured)."
+          echo "Built image: ${{ steps.meta.outputs.image }}:${{ steps.meta.outputs.tag }}"
+          echo "Triggered by: ${{ github.actor }}"
+
+# Notes:
+# - Ensure you add repository secrets: DOCKERHUB_USERNAME and DOCKERHUB_TOKEN
+# - The workflow attempts to login only if the secrets exist. Without secrets,
+#   build will still run locally on the runner but push will fail.
+# - Adjust `IMAGE_NAME` in the `Determine image name and tags` step if you
+#   want a different registry or repository (e.g., ghcr.io/${{ github.repository }}).
+
